--- a/css/style.css
+++ b/css/style.css
@@ -9,21 +9,29 @@
   min-height: 730px;
   background-image: url(../images/background-map.jpg);
   background-size: cover;
+  padding:0;
+  margin:0;
 }
 
 #accueil{
-  color: #FFF;
+  color: #000;
+  background-color: rgba(255,255,255, 0.9);
+  width: 50%;
+  margin: auto;
+
 }
 #inscription{
   background-color: rgba(255,255,255, 0.9);
 }
 .bottom-footer{
+  padding:0;
+  margin:0;
   max-height: 20px;
   width: 100%;
-  height: 150px;
+  background: #bdcedd;
   position: fixed;
   bottom: 0px;
-  left: 0px; 
+  left: 0px;
 }
 
 /*--
@@ -35,7 +43,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 html, body{
   	font-family: 'Open Sans', sans-serif;
     font-size: 100%;
-  	background: #FFf;
+  	background: #bdcedd;
 }
 body a{
 	transition:0.5s all;
