--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 .contenu{
   min-height: 730px;
-  background-image: url(../images/background-map3.jpg);
+  background-image: url(../images/background-road.jpg);
   background-size: cover;
   padding:0;
   margin:0;
