--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,8 @@
 }
 
 #accueil{
-  color: #000;
-  background-color: rgba(255,255,255, 0.9);
+  color: #fff;
+  /*background-color: rgba(255,255,255, 0.9); */
   width: 50%;
   margin: auto;
 
