--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,18 @@
   padding:0;
   margin:0;
 }
-
+.profil{
+  display: inline-block;
+  width: 30%;
+  margin-left: 15%;
+  text-align: center;
+}
+.creation{
+  max-width: 700px;
+  width: 50%;
+  margin-left: 23%;
+  margin-top: 5%;
+}
 #accueil{
   color: #fff;
   /*background-color: rgba(255,255,255, 0.9); */
