--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,17 @@
   margin:0;
 }
 
+.vertical-center{
+	vertical-align: middle;
+}
 #accueil{
   color: #fff;
   /*background-color: rgba(255,255,255, 0.9); */
   width: 50%;
   margin: auto;
-
 }
+
+
 #inscription{
   background-color: rgba(255,255,255, 0.9);
 }
