--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -365,7 +365,7 @@ h6,
   font-family: inherit;
   font-weight: 400;
   line-height: 1.1;
-  color: inherit;
+  color: #fff;
 }
 h1 small,
 h2 small,
@@ -467,6 +467,7 @@ h6,
 }
 p {
   margin: 0 0 10px;
+  color: #fff;
 }
 .lead {
   margin-bottom: 20px;
