--- a/css/style.css
+++ b/css/style.css
@@ -532,6 +532,11 @@ a.news-btn:hover{
 }
 .footer {
 	margin-top: 3em;
+	position:absolute;
+	bottom:0;
+	width:100%;
+	padding-top:300px;
+	height:100px;
 }
 /*---End-footer----*/
 /*---- about ----*/
