--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,37 @@
 .modal-title {
   color: #333;
 }
+
+
+table {
+border: medium solid #6495ed;
+border-collapse: collapse;
+width: 50%;
+}
+th {
+font-family: monospace;
+border: thin solid #6495ed;
+width: 50%;
+padding: 5px;
+background-color: #D0E3FA;
+background-image: url(sky.jpg);
+}
+td {
+font-family: sans-serif;
+border: thin solid #6495ed;
+width: 50%;
+padding: 5px;
+text-align: center;
+background-color: #ffffff;
+}
+caption {
+font-family: sans-serif;
+}
+
+
+
+
+
 /*--
 Author: W3layouts
 Author URL: http://w3layouts.com
