--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,30 @@ caption {
 font-family: sans-serif;
 }
 
-
+table {
+border: medium solid #6495ed;
+border-collapse: collapse;
+width: 50%;
+}
+.tab-profil th {
+font-family: monospace;
+border: thin solid #6495ed;
+width: 50%;
+padding: 5px;
+background-color: #D0E3FA;
+background-image: url(sky.jpg);
+}
+.tab-profil td {
+font-family: sans-serif;
+border: thin solid #6495ed;
+width: 50%;
+padding: 5px;
+text-align: center;
+background-color: #ffffff;
+}
+.tab-profil caption {
+font-family: sans-serif;
+}
 
 
 
