--- a/css/style.css
+++ b/css/style.css
@@ -90,14 +90,14 @@ font-family: sans-serif;
 border: none;
 border-collapse: collapse;
 width: 100%;
+margin-bottom: 15px;
 }
 .tab-profil th {
 font-family: monospace;
-border: thin solid #6495ed;
+border: none;
 width: 50%;
 padding: 5px;
-background-color: #D0E3FA;
-background-image: url(sky.jpg);
+background-color: transparent;
 }
 .tab-profil td {
 font-family: sans-serif;
@@ -105,7 +105,8 @@ border: none;
 width: 50%;
 padding: 5px;
 text-align: center;
-background-color: #ffffff;
+background-color: transparent;
+color: #fff;
 }
 .tab-profil caption {
 font-family: sans-serif;
