--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,9 @@
   margin-left: 23%;
   margin-top: 5%;
 }
-
+select{
+  visibility: hidden;
+}
 #accueil{
   color: #fff;
   /*background-color: rgba(255,255,255, 0.9); */
